new query: query_1

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 server {
 
     listen 80;
-    server_name 217.27.204.228;
+    server_name apiblzapp.ml www.apiblzapp.ml;
 
     location / {
         include uwsgi_params;
