--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,117 @@
 server {
+     
+
+    if ($host = www.apiblzapp.ml) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    if ($host = apiblzapp.ml) {
+        return 301 https://$host$request_uri;
+    }
 
     listen 80;
-    # listen [::]:80; 
 
     server_name apiblzapp.ml www.apiblzapp.ml;
+    
+    location / {
+        rewrite ^ https://$host$request_uri? permanent;
+    }
+    
+    # for certbot challenges (renewal process)
+    location ~ /.well-known/acme-challenge {
+        allow all;
+        root /data/letsencrypt;
+    }
+
+}
+
+#https://apiblzapp.ml
+server {
+   
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-Frame-Options "DENY" always;
+    #CSP
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+    listen 443 ssl;
+    # listen [::]:443 ssl http2;
+    
+    server_name apiblzapp.ml;
+
+    # server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/apiblzapp.ml/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/apiblzapp.ml/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    #ssl_buffer_size 8k;
+
+    #ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    #ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+    #ssl_prefer_server_ciphers on;
+
+    #ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+
+    #ssl_ecdh_curve secp384r1;
+    #ssl_session_tickets off;
+
+    # OCSP stapling
+    #ssl_stapling on;
+    #ssl_stapling_verify on;
+    #resolver 8.8.8.8;
+
+    return 301 https://www.apiblzapp.ml$request_uri;
+
+}
+
+#https://www.apiblzapp.ml
+server {
+
+
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-Frame-Options "DENY" always;
+    #CSP
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    
+    # this header blackens the screen !
+    # add_header Content-Security-Policy "frame-src 'self'; default-src 'self'; script-src 'self' 'unsafe-inline' https://maxcdn.bootstrapcdn.com https://ajax.googleapis.com; img-src 'self'; style-src 'self' https://maxcdn.bootstrapcdn.com; font-src 'self' data: https://maxcdn.bootstrapcdn.com; form-action 'self'; upgrade-insecure-requests;" always;    
+
+    server_name www.apiblzapp.ml;
+    listen 443 ssl;
+    #listen [::]:443 ssl http2;
+
+    #server_tokens off;
+
+    #ssl on;
+
+    #ssl_buffer_size 8k;
+    #ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    #ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+    #ssl_prefer_server_ciphers on;
+    #ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+
+    #ssl_ecdh_curve secp384r1;
+    #ssl_session_tickets off;
+
+    # OCSP stapling
+    #ssl_stapling on;
+    #ssl_stapling_verify on;
+    #resolver 8.8.8.8 8.8.4.4;
+
+    ssl_certificate /etc/letsencrypt/live/apiblzapp.ml/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/apiblzapp.ml/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
 
     location / {
         include uwsgi_params;
         uwsgi_pass flask:8080;
     }
 
+    root /usr/share/nginx/html;
+    index index.html;
 }
