--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -2,6 +2,7 @@ cffi==1.14.3
 click==7.1.2
 cryptography==3.2.1
 Flask==1.1.2
+Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
