--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
             - ./dh-param/dhparam-2048.pem:/etc/ssl/certs/dhparam-2048.pem
             - ./letsencrypt/letsencrypt-site:/usr/share/nginx/html
             - /etc/letsencrypt/options-ssl-nginx.conf:/etc/letsencrypt/options-ssl-nginx.conf
-            - /etc/letsencrypt/live/apiblzapp.ml/fullchain.pem:/etc/letsencrypt/live/apiblzapp.ml/fullchain.pem
-            - /etc/letsencrypt/live/apiblzapp.ml/privkey.pem:/etc/letsencrypt/live/apiblzapp.ml/privkey.pem
+            - /etc/letsencrypt/live/www.apiblzapp.ml/fullchain.pem:/etc/letsencrypt/live/apiblzapp.ml/fullchain.pem
+            - /etc/letsencrypt/live/www.apiblzapp.ml/privkey.pem:/etc/letsencrypt/live/apiblzapp.ml/privkey.pem
         container_name: nginx
         restart: always
         ports:
